Fixed horizontal scrollbar bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,10 @@ body {
 	margin: 0 auto;
 } */
 
+.container-bootstrap-bug{
+	padding: 0 10px;
+}
+
 #dashboard-side {
 	
 	background: #222222;
